Reducing main margin to fix width issue on mobile.

--- a/style.css
+++ b/style.css
@@ -46,6 +46,10 @@ body {
         flex-direction: column;
         gap: 1rem;
     }
+
+    .main {
+        margin: 0.5rem;
+    }
 }
 
 .title{
@@ -66,7 +70,7 @@ body {
     color: black;
     font-family: "Montserrat";
     height: 2rem;
-    min-width: 10rem;
+    min-width: 12rem;
     border-radius: 2rem;
     padding-left: 1rem;
     border: none;
@@ -92,7 +96,7 @@ body {
 
 .main {
     width: max(25rem, 40vw);
-    margin: 1rem;
+    margin: max(1rem, 3vh);
     display: grid;
     grid-template-rows: auto;
     align-content: start;
